k8s/bonus-app2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-info-service-app2
  labels:
    app: devops-info-service-app2
    component: web
    bonus: "true"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: devops-info-service-app2
  template:
    metadata:
      labels:
        app: devops-info-service-app2
        component: web
        bonus: "true"
    spec:
      containers:
        - name: devops-info-service-app2
          image: devops-info-service:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
