k8s/bonus-app1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    app: devops-info-service
    bonus: "true"
spec:
  type: ClusterIP
  selector:
    app: devops-info-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
