k8s/bonus-app2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels:
    app: devops-info-service-app2
    bonus: "true"
spec:
  type: ClusterIP
  selector:
    app: devops-info-service-app2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
