k8s/bonus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bonus-apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - local.example.com
      secretName: bonus-local-tls
  rules:
    - host: local.example.com
      http:
        paths:
          - path: /app1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app1-service
                port:
                  number: 80
          - path: /app2(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app2-service
                port:
                  number: 80
